--- a/index.html
+++ b/index.html
@@ -69,12 +69,11 @@
                 <div class="d-flex">
                     <div class="l-content">
                         <img src="images/1.jpg" alt="">
-                        <button>click</button>
+                        <button class="btn">TRAVEL</button>
                         <h1>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h1>
                         <h4>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in...</h4>
                         <p>Katy Liu on Sep 29, 2017 at 9:48 am</p>
                     </div>
-                    
                     <div class="r-content">
                         <div class="item">
                             <div class="d-flex">
@@ -134,12 +133,14 @@
             </nav>
             <div class="d-flex">
             <div class="l-content">
+                <button class="btn">TRAVEL</button>
                 <img src="images/5.jpg" alt="">
                 <h1>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h1>
                 <h4>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in...</h4>
                 <p>Katy Liu on Sep 29, 2017 at 9:48 am</p>
             </div>
             <div class="l-content">
+                <button class="btn">TRAVEL</button>
                 <img src="images/6.jpg" alt="">
                 <h1>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h1>
                 <h4>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in...</h4>
@@ -158,7 +159,7 @@
                 </div>
                 <div class="item">
                     <div class="d-flex">
-                    <img src="images/8.jpg" alt="">
+                    <img src="images/1.jpg" alt="">
                     <div>
                     <h2>How Did van Gogh’s Turbulent Mind Depict One of the Most</h2>
                     <p>Katy Liu on Sep 29, 2017 at 9:48 am</p></div>
@@ -168,7 +169,7 @@
             <div class="items">
                 <div class="item">
                     <div class="d-flex">
-                    <img src="images/8.jpg" alt="">
+                    <img src="images/2.jpg" alt="">
                     <div>
                     <h2>How Did van Gogh’s Turbulent Mind Depict One of the Most</h2>
                     <p>Katy Liu on Sep 29, 2017 at 9:48 am</p></div>
@@ -176,7 +177,7 @@
                 </div>
                 <div class="item">
                     <div class="d-flex">
-                    <img src="images/8.jpg" alt="">
+                    <img src="images/4.jpg" alt="">
                     <div>
                     <h2>How Did van Gogh’s Turbulent Mind Depict One of the Most</h2>
                     <p>Katy Liu on Sep 29, 2017 at 9:48 am</p></div>
@@ -238,7 +239,121 @@
                 </aside>
             </div>
         </div>
-
     </section>
+    <section class="life-style-section">
+        <div class="container">
+            <div class="d-flex">
+                <div class="item">
+                    <img src="images/8.jpg" alt="">
+                    <button class="btn">TRAVEL</button>
+                    <h2>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h2>
+                    <p>Katy Liu on Sep 29, 2017 at 9:48 am</p>
+                </div>
+                <div class="item">
+                    <img src="images/8.jpg" alt="">
+                    <button class="btn">TRAVEL</button>
+                    <h2>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h2>
+                    <p>Katy Liu on Sep 29, 2017 at 9:48 am</p>
+                </div>
+                <div class="item">
+                    <img src="images/8.jpg" alt="">
+                    <button class="btn">TRAVEL</button>
+                    <h2>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h2>
+                    <p>Katy Liu on Sep 29, 2017 at 9:48 am</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="video-section">
+        <div class="container">
+        <div class="d-flex">
+            <aside class="sec-left-side">
+                <h1>Latest Articles</h1>
+                <div class="item d-flex">
+                    <img src="images/1.jpg" alt="">
+                    <div>
+                        <h2>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h2>
+                        <h5>Pick the yellow peach that looks like a sunset with its red, orange, and pink coat skin, peel it off with your teeth. Sink them into unripened..</h5>
+                        <p>Katy Liu on Sep 29, 2017 at 9:48 am</p>
+                    </div>
+                </div>
+                <div class="item d-flex">
+                    <img src="images/2.jpg" alt="">
+                    <div>
+                        <h2>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h2>
+                        <h5>Pick the yellow peach that looks like a sunset with its red, orange, and pink coat skin, peel it off with your teeth. Sink them into unripened..</h5>
+                        <p>Katy Liu on Sep 29, 2017 at 9:48 am</p>
+                    </div>
+                </div>
+                <div class="item d-flex">
+                    <img src="images/3.jpg" alt="">
+                    <div>
+                        <h2>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h2>
+                        <h5>Pick the yellow peach that looks like a sunset with its red, orange, and pink coat skin, peel it off with your teeth. Sink them into unripened..</h5>
+                        <p>Katy Liu on Sep 29, 2017 at 9:48 am</p>
+                    </div>
+                </div>
+                <div class="item d-flex">
+                    <img src="images/6.jpg" alt="">
+                    <div>
+                        <h2>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h2>
+                        <h5>Pick the yellow peach that looks like a sunset with its red, orange, and pink coat skin, peel it off with your teeth. Sink them into unripened..</h5>
+                        <p>Katy Liu on Sep 29, 2017 at 9:48 am</p>
+                    </div>
+                </div>
+            </aside>
+            <aside class="sec-right-side">
+                <h1>Most Popular Videos</h1>
+                <div class="right--content">
+                    <img src="images/3.jpg" alt="">
+                    <a href=""><i class="fa-solid fa-play"></i></a>
+                    <button class="btn">click</button>
+                    <h2>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h2>
+                    <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in...</h5>
+                    <p>Katy Liu on Sep 29, 2017 at 9:48 am</p>
+                </div>
+                <div class="right--content">
+                    <img src="images/5.jpg" alt="">
+                    <a href=""><i class="fa-solid fa-play"></i></a>
+                    <button class="btn">click</button>
+                    <h2>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h2>
+                    <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in...</h5>
+                    <p>Katy Liu on Sep 29, 2017 at 9:48 am</p>
+                </div>
+            </aside>
+        </div>
+        <button class="btn-load">Load More</button>
+    </div>
+    </section>
+    <footer>
+        <div class="container">
+        <div class="d-flex">
+            <div class="item item1">
+                <h1>World</h1>
+                <h4>Copyright © 2022 coding by mohamed elmansy </h4>
+            </div>
+            <div class="item item2">
+                <ul class="d-flex padd" >
+                <li><a href="">Home</a></li>
+                <li><a href="">Fashion</a></li>
+                <li><a href="">Gadgets</a></li>
+                </ul>
+                <ul class="d-flex">
+                <li><a href="">LifeStyle</a></li>
+                <li><a href="">Video</a></li>
+                <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+            <div class="item item3">
+                <h1>Subscribe</h1>
+                <form action="">
+                    <input type="email" name="" id="" placeholder="Enter Your Email">
+                </form>
+                <a href=""><i class="fa-solid fa-arrow-right"></i></a>
+                
+            </div>
+        </div>
+    </div>
+    </footer>
 </body>
 </html>
