--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
     <nav class="first-nav">
@@ -32,15 +33,15 @@
         <div class="overlay">
             <div class="container">
                 <div class="d-flex">
-                    <div class="items-d-flex">
+                    <div class="items-d-flex none">
                         <h1>4</h1>
                         <h3>Lorem ipsum dolor sit Voluptate, exercitationem!</h3>
                     </div>
-                    <div class="items-d-flex ">
+                    <div class="items-d-flex white-color" >
                         <h1>4</h1>
-                        <h3 class="white-color">Lorem ipsum dolor sit Voluptate, exercitationem!</h3>
+                        <h3>Lorem ipsum dolor sit Voluptate, exercitationem!</h3>
                     </div>
-                    <div class="items-d-flex">
+                    <div class="items-d-flex none">
                         <h1>4</h1>
                         <h3>Lorem ipsum dolor sit Voluptate, exercitationem!</h3>
                     </div>
